<resources>
    <string name="app_name">LEADERBOAD</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="learning_hours">" learning hours, "</string>
    <string name="learning_time">learning hours</string>
    <string name="problem_loading">Problem Loading</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="required_fields">Please Fill All Fields</string>
</resources>